tests/errmsgs/twrongcolon.nim
discard """
errormsg: "in expression '("
nimout: '''
Error: in expression '(
  890)': identifier expected, but found ''
'''

line: 11
"""

var n: int : 890
